// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should work for multiple CommonJS exports with source maps: errors 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports with source maps: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
exports[\\"object\\"] = (object);
exports[\\"otherObject\\"] = (otherObject);"
`;

exports[`loader should work for multiple CommonJS exports with source maps: result 1`] = `Object {}`;

exports[`loader should work for multiple CommonJS exports with source maps: warnings 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports: errors 1`] = `Array []`;

exports[`loader should work for multiple CommonJS exports: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
exports[\\"object\\"] = (object);
exports[\\"otherObject\\"] = (otherObject);"
`;

exports[`loader should work for multiple CommonJS exports: result 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`loader should work for multiple CommonJS exports: warnings 1`] = `Array []`;

exports[`loader should work for single CommonJS export with source maps: errors 1`] = `Array []`;

exports[`loader should work for single CommonJS export with source maps: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
module.exports = object;"
`;

exports[`loader should work for single CommonJS export with source maps: result 1`] = `Object {}`;

exports[`loader should work for single CommonJS export with source maps: warnings 1`] = `Array []`;

exports[`loader should work for single CommonJS export: errors 1`] = `Array []`;

exports[`loader should work for single CommonJS export: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
module.exports = object;"
`;

exports[`loader should work for single CommonJS export: result 1`] = `
Object {
  "key": "value",
}
`;

exports[`loader should work for single CommonJS export: warnings 1`] = `Array []`;

exports[`loader should work without options: errors 1`] = `Array []`;

exports[`loader should work without options: module 1`] = `
"const object = {
  key: 'value'
};
const otherObject = {
  otherKey: 'otherValue'
};

module.exports = { foo: 'bar' };


/*** EXPORTS FROM exports-loader ***/
"
`;

exports[`loader should work without options: result 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`loader should work without options: warnings 1`] = `Array []`;
